--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,11 @@
   },
   "author": "René Drieënhuizen",
   "license": "MIT",
+  "devDependencies": {
+    "typescript": "^2.6.2"
+  },
   "dependencies": {
+    "gsap": "^2.0.2",
     "raw-loader": "^0.5.1",
     "ts-loader": "^4.1.0",
     "webpack": "^4.1.1",
