--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seng-effectrender",
+  "name": "seng-effectrenderer",
   "version": "0.0.1",
   "description": "Description",
   "main": "./index.js",
@@ -52,11 +52,11 @@
     "mediamonks"
   ],
   "bugs": {
-    "url": "https://github.com/mediamonks/seng-effectrender/issues"
+    "url": "https://github.com/mediamonks/seng-effectrenderer/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mediamonks/seng-effectrender.git"
+    "url": "https://github.com/mediamonks/seng-effectrenderer.git"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.35",
