--- a/example/package.json
+++ b/example/package.json
@@ -10,14 +10,14 @@
   "author": "René Drieënhuizen",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^2.6.2"
-  },
-  "dependencies": {
-    "gsap": "^2.0.2",
+    "typescript": "^2.6.2",
     "raw-loader": "^0.5.1",
     "ts-loader": "^4.1.0",
     "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
+    "webpack-cli": "^3.0.0",
     "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "gsap": "^2.0.2"
   }
 }
