--- a/example/package.json
+++ b/example/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "example",
-  "version": "v1.0.5",
+  "name": "minimal-webpack-setup",
+  "version": "1.0.0",
   "description": "",
+  "author": "Reinder Nijhoff reinder@mediamonks.com>",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./build-tools/webpack.config.js --mode development",
-    "build": "webpack --config ./build-tools/webpack.config.js --mode production"
+    "dev": "webpack serve --config ./webpack.config.js --mode development"
   },
-  "author": "René Drieënhuizen",
+  "keywords": [],
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^2.6.2",
-    "raw-loader": "^0.5.1",
-    "ts-loader": "^4.1.0",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^3.0.0",
-    "webpack-dev-server": "^3.1.1"
-  },
-  "dependencies": {
-    "gsap": "^2.0.2"
+    "raw-loader": "^4.0.2",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
