--- a/example/package.json
+++ b/example/package.json
@@ -5,14 +5,16 @@
   "author": "Reinder Nijhoff <reinder@mediamonks.com>",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config ./webpack.config.js --mode development"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
-    "raw-loader": "^4.0.2",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "@mediamonks/image-effect-renderer": "^2.1.2"
   }
 }
