--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mediamonks/image-effect-renderer",
   "version": "2.2.5",
-  "description": "The image-effect-renderer is a lightweight package that allows you to run WebGL fragment shaders in your website using WebGL. It can be used to apply effects to HTML image or video sources.",
+  "description": "The image-effect-renderer is a lightweight package that allows you to run WebGL fragment shaders in your website using WebGL. It can be used to apply effects to HTML images or video sources. Zero dependencies.",
   "keywords": [
     "fragment shader",
     "webgl",
