--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "shadertoy",
     "glsl",
     "shader",
-    "oneshader"
+    "oneshader",
+    "react"
   ],
   "repository": "git@github.com:mediamonks/image-effect-renderer.git",
   "author": "Reinder Nijhoff <reinder@mediamonks.com>",
@@ -22,9 +23,12 @@
   "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/image-effect-renderer.js",
-      "require": "./dist/image-effect-renderer.umd.cjs",
-      "types": "./index.d.ts"
+      "types": "./index.d.ts",
+      "import": "./dist/image-effect-renderer.js"
+    },
+    "./react": {
+      "types": "./dist/react/index.d.ts",
+      "import": "./dist/image-effect-renderer-react.js"
     }
   },
   "files": [
@@ -43,13 +47,23 @@
     "prepare-publish": "tsx ./scripts/preparePublish.ts"
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
     "@types/shelljs": "^0.8.14",
+    "react": "^18.3.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "tsx": "^4.6.2",
     "typescript": "^5.0.4",
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.2.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=16.0.0"
