Consolidate publish workflows and update to Node 22 with provenance support

--- a/.github/workflows/bump-version-and-publish.yml
+++ b/.github/workflows/bump-version-and-publish.yml
@@ -1,6 +1,8 @@
-name: Bump version, Tag & Publish
+name: Build & Publish
 
 on:
+  push:
+    branches: [main]
   workflow_dispatch:
     inputs:
       version:
@@ -22,8 +24,11 @@ on:
           - rc
 
 jobs:
-  bump-version:
+  publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
 
     steps:
       - name: Check out source
@@ -32,8 +37,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+
+      - name: Update npm to latest
+        run: npm install -g npm@latest
 
       - name: Install npm packages
         run: npm ci
@@ -43,24 +52,35 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
 
-      - name: Bump Version
+      - name: Bump Version (Release)
+        if: github.event_name == 'workflow_dispatch'
         run: |
           npm version ${{ github.event.inputs.version }} --no-git-tag-version --preid ${{ github.event.inputs.prereleaseId }}
           git add .
           git commit -m "v$(npm pkg get version | tr -d '"')" --no-verify
           git tag $(npm pkg get version | tr -d '"') -m "v$(npm pkg get version | tr -d '"')"
 
-      - name: Build & Publish
+      - name: Bump Version (Dev)
+        if: github.event_name == 'push'
+        run: |
+          echo "$(npm pkg get version | cut -d '"' -f 2 | cut -d '-' -f 1)-dev.$(git rev-parse --short HEAD)" | xargs npm version --no-git-tag-version
+
+      - name: Build
         run: npm run build
 
-      - name: Publish to NPM
-        run: |
-          npm run prepare-publish
-          cd ./dist
-          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-          npm publish
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Prepare publish
+        run: npm run prepare-publish
+
+      - name: Publish to NPM (Release)
+        if: github.event_name == 'workflow_dispatch'
+        run: npm publish
+        working-directory: ./dist
+
+      - name: Publish to NPM (Dev)
+        if: github.event_name == 'push'
+        run: npm publish --tag next
+        working-directory: ./dist
 
       - name: Push latest version
+        if: github.event_name == 'workflow_dispatch'
         run: git push origin main --follow-tags
