Add React 19 support to peer dependencies

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "vite-plugin-dts": "^4.2.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
